# pdf_parser_python

./: .env.example  .gitignore  PROJECT_TECH_LOGIC.md  README.md  _debug_images.py  analyze_hotspot.py  analyze_sample.py  check_jobs.py  cleanup.php  db_dump.txt  debug_blocks.py  debug_blocks_v2.py  debug_images.py  debug_log.txt  debug_output.txt  debug_results.txt  deep_analysis.py  deep_analysis.txt  laravel_bridge.py  main.py  pyproject.toml  requirements.txt  sample_analysis.txt  submit_to_laravel.py  test_parser.py  test_q64.py  test_results.txt  verify.php  verify_import.py
parser/: __init__.py  __main__.py  background_worker.py  block_extractor.py  cli.py  crud.py  database.py  engine.py  models.py  s3_uploader.py  server.py  state_machine.py  storage.py  validator.py
test_soa.json/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_raw_blocks.json  SOA-C02-mrhln7_validation.json
test_soa_diag_v1/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_raw_blocks.json  SOA-C02-mrhln7_validation.json
test_soa_filtered/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_raw_blocks.json
test_soa_final_v1/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_raw_blocks.json  SOA-C02-mrhln7_validation.json
test_soa_v2/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_raw_blocks.json  SOA-C02-mrhln7_validation.json
test_soa_v3_filtered/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_raw_blocks.json  SOA-C02-mrhln7_validation.json
test_soa_v4_p1_5/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_raw_blocks.json
test_soa_v5_final/: SOA-C02-mrhln7_parsed.json  SOA-C02-mrhln7_validation.json
(+4 files in other folders)
