[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pdf-parser"
version = "1.0.0"
description = "Scalable PDF ingestion and parsing engine for certification exam questions"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
pdf-parser = "parser.cli:cli"

[tool.setuptools.packages.find]
include = ["parser*"]
